# origami

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  changelog  origami.cabal
src/Data/: Origami.hs
src/Data/Origami/Internal/: Build.hs  Fold.hs  FoldFamily.hs  Pretty.hs  TH.hs  THUtils.hs  Trifunctor.hs
tests/: Test.hs
tests/Data/: OrigamiTests.hs
tests/Data/Origami/Internal/: BuildTests.hs
tests/Data/Origami/Internal/TestFiles/: Bar.hs  Baz.hs  Empty.hs  Foo.hs  Infix.hs  Param.hs  Qual.hs
